frontend-prod/fe-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fe-prod
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: apps.cilist.my.id
    http:
      paths:
        - path:
          pathType:
          backend:
            serviceName: svc-fe-cilist-prod
            servicePort: 80
